--- a/style.css
+++ b/style.css
@@ -10,15 +10,19 @@ body {
   min-height: 100vh;
   /* No floating content on sides */
   --tw-bg-opacity: 1;
-  background-color: #F7F7F7; /* Off-white background */
-  color: #222; /* Slightly softened black text */
+  background-color: #F7F7F7;
+  /* Off-white background */
+  color: #222;
+  /* Slightly softened black text */
   overscroll-behavior-y: contain;
   letter-spacing: 1px;
   font-size: 18px;
   overflow-x: hidden;
   font-family: 'Questrial', sans-serif;
-  -webkit-font-smoothing: antialiased; /* For Chrome and Safari */
-  -moz-osx-font-smoothing: grayscale; /* For Firefox on macOS */
+  -webkit-font-smoothing: antialiased;
+  /* For Chrome and Safari */
+  -moz-osx-font-smoothing: grayscale;
+  /* For Firefox on macOS */
 }
 
 .flex-grow-1 {
@@ -41,8 +45,10 @@ header {
 
 header p {
   margin: 0;
-  flex-grow: 1; /* Allow the paragraph to take up available space */
-  text-align: center; /* Center the paragraph horizontally */
+  flex-grow: 1;
+  /* Allow the paragraph to take up available space */
+  text-align: center;
+  /* Center the paragraph horizontally */
 }
 
 nav {
@@ -50,31 +56,31 @@ nav {
 }
 
 .burger-menu {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    gap: 5px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  gap: 5px;
 }
 
 .bar {
-    width: 25px;
-    height: 3px;
-    background-color: #222;
-    transition: transform 0.3s ease, opacity 0.3s ease;
+  width: 25px;
+  height: 3px;
+  background-color: #222;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .active .bar:first-child {
-    transform: translateY(6px) rotate(45deg);
+  transform: translateY(6px) rotate(45deg);
 }
 
 .active .bar:last-child {
-    transform: translateY(-10px) rotate(-45deg);
+  transform: translateY(-10px) rotate(-45deg);
 }
 
 .active .bar:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 
 
@@ -84,21 +90,30 @@ nav a,
   margin: 5px 10px;
   padding: 5px 10px;
   border-radius: 5px;
-  color: #222; /* Slightly softened black text */
+  color: #222;
+  /* Slightly softened black text */
   border: 1px solid rgba(34, 34, 34, 0.0);
-  transition: border-color 0.3s ease; /* Add a smooth transition for border changes */
+  transition: border-color 0.3s ease;
+  /* Add a smooth transition for border changes */
 }
 
 
 
 nav a:hover {
-  border-color: rgba(34, 34, 34, 0.3); /* Darker border color on hover */
+  border-color: rgba(34, 34, 34, 0.3);
+  /* Darker border color on hover */
 }
 
 .active-nav {
-  border-color: rgba(34, 34, 34, 0.3); /* Darker border color on hover */
+  border-color: rgba(34, 34, 34, 0.3);
+  /* Darker border color on hover */
 }
-
+.connect-wallet{
+  border-color: rgba(34, 34, 34, 0.3);
+}
+.connect-wallet:hover{
+  border-color: rgba(34, 34, 34, 0.3);
+}
 .center-nav {
 
   display: flex;
@@ -106,6 +121,7 @@ nav a:hover {
   font-weight: bold;
   border: 0;
 }
+
 
 /* Header Styles */
 header {
@@ -132,11 +148,15 @@ main {
 
 .content {
   opacity: 0;
-  display:none;
-  transition: max-width 0.5s ease; /* Add transition for opacity and max-width */
-  max-width: 800px; /* Adjust the maximum width as needed */
-  padding: 0 20px; /* Add some padding for better spacing */
-  box-sizing: border-box; /* Include padding in the width calculation */
+  display: none;
+  transition: max-width 0.5s ease;
+  /* Add transition for opacity and max-width */
+  max-width: 800px;
+  /* Adjust the maximum width as needed */
+  padding: 0 20px;
+  /* Add some padding for better spacing */
+  box-sizing: border-box;
+  /* Include padding in the width calculation */
 }
 
 /* Center the first paragraph */
@@ -180,96 +200,114 @@ p:not(:first-of-type) {
   background-color: #444;
 }
 
-ul{
+ul {
   text-align: left;
 }
-li{
+
+li {
   text-align: left;
   margin-bottom: 5px;
 }
 
 /* Card Styles */
 .cards {
-    display: flex;
-    justify-content: center;
-    gap: 20px; /* Add some space between cards */
-    margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  /* Add some space between cards */
+  margin-top: 30px;
 }
 
 .card {
-    padding: 20px;
-   
-    border: 1px solid rgba(34, 34, 34, 0.1);
-    border-radius: 10px;
-    
-    width: 100%; /* Set to 100% width by default */
-    max-width: 250px; /* Add a maximum width */
-    transition: transform 0.3s ease; /* Add a subtle transformation on hover */
+  padding: 20px;
+
+  border: 1px solid rgba(34, 34, 34, 0.1);
+  border-radius: 10px;
+
+  width: 100%;
+  /* Set to 100% width by default */
+  max-width: 250px;
+  /* Add a maximum width */
+  transition: transform 0.3s ease;
+  /* Add a subtle transformation on hover */
 }
 
-#webgl-container{
+#webgl-container {
   max-width: 200px;
   max-height: 200px;
   display: flex;
-    justify-content: center;
-    margin: auto;
+  justify-content: center;
+  margin: auto;
 }
 
 /* Input Styles */
 .card input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid rgba(34, 34, 34, 0.1);
-    border-radius: 5px;
-    font-size: 16px;
-    color: #222; /* Slightly softened black text */
-    transition: border-color 0.3s ease; /* Add a smooth transition for border changes */
-    box-sizing: border-box; /* Include padding and border in the width calculation */
-    margin-bottom: 5px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(34, 34, 34, 0.1);
+  border-radius: 5px;
+  font-size: 16px;
+  color: #222;
+  /* Slightly softened black text */
+  transition: border-color 0.3s ease;
+  /* Add a smooth transition for border changes */
+  box-sizing: border-box;
+  /* Include padding and border in the width calculation */
+  margin-bottom: 5px;
 }
 
 .card input:hover,
 .card input:focus {
-    border-color: rgba(34, 34, 34, 0.3); /* Darker border color on hover and focus */
-    outline: none; /* Remove default focus outline */
+  border-color: rgba(34, 34, 34, 0.3);
+  /* Darker border color on hover and focus */
+  outline: none;
+  /* Remove default focus outline */
 }
 
 .card-header {
-    display: flex;
-    align-items: start;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba(34, 34, 34, 0.1);
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(34, 34, 34, 0.1);
 }
 
 .card-header h2 {
-    font-size: 16px;
-    color: #222; /* Slightly softened black text */
+  font-size: 16px;
+  color: #222;
+  /* Slightly softened black text */
 }
+
 .card-button {
-    margin-top: 10px; /* Add margin to create spacing above button */
+  margin-top: 10px;
+  /* Add margin to create spacing above button */
 }
+
 .data-content {
-    margin-bottom: 5px; /* Adjust the margin below the data content */
+  margin-bottom: 5px;
+  /* Adjust the margin below the data content */
 }
-.data-content p{
+
+.data-content p {
   font-size: 14px;
   text-align: left;
 }
 
-#home{
-    display: block;
-    opacity: 1;
+#home {
+  display: block;
+  opacity: 1;
 }
 
-.s-shape{
- opacity:0;
+.s-shape {
+  opacity: 0;
 }
-header > div{
+
+header>div {
   position: relative;
 }
-.align-items-flex-start{
+
+.align-items-flex-start {
   align-items: flex-start;
 }
 
@@ -288,7 +326,7 @@ header > div{
 }
 
 .roadmap-step {
-  
+
   padding: 30px;
   border: 1px solid rgba(34, 34, 34, 0.1);
   border-radius: 10px;
@@ -319,34 +357,38 @@ header > div{
   line-height: 1.5;
 }
 
-@media (min-width: 768px){
-  .mt-5{
+@media (min-width: 768px) {
+  .mt-5 {
     margin-top: -4.5rem;
   }
-  
-  nav > div {
+
+  nav>div {
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
 
-}
+  }
 
 }
 
 /* Responsive Styles */
 @media (max-width: 768px) {
-  .content h1{
+  .content h1 {
     margin-top: 0;
   }
-  .active-header{
+
+  .active-header {
     height: 100vh;
   }
+
   .roadmap-container {
     grid-template-columns: 1fr;
-}
-  .mt-5{
+  }
+
+  .mt-5 {
     margin-top: -5.5rem;
   }
+
   header {
     flex-direction: column;
     text-align: center;
@@ -354,45 +396,49 @@ header > div{
     z-index: 2;
     padding-bottom: 30px;
   }
-  .logo-container{
+
+  .logo-container {
     margin-bottom: 10px;
   }
-   .burger-menu {
-        display: flex;
-    }
-    nav > div {
-      width: 100%;
-      display: flex;
-      justify-content: center;
 
-    }
-      
-    
+  .burger-menu {
+    display: flex;
+  }
+
+  nav>div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+  }
+
+
   nav {
     display: none;
-        flex-direction: column;
-        align-items: center;
-        background-color: #F7F7F7;
-        position: relative;
-        margin-top: 15px;
-        left: 0;
-        width: 100%;
-        opacity:0;
-        
+    flex-direction: column;
+    align-items: center;
+    background-color: #F7F7F7;
+    position: relative;
+    margin-top: 15px;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+
   }
-   nav.active {
-        display: flex;
-    }
+
+  nav.active {
+    display: flex;
+  }
 
   nav a {
-   display: block;
-        padding: 10px;
-        border: none;
-        text-align: center;
-        width: 100%;
+    display: block;
+    padding: 10px;
+    border: none;
+    text-align: center;
+    width: 100%;
   }
-  
-  
+
+
 
   .center-nav {
     margin: 10px auto;
@@ -400,15 +446,20 @@ header > div{
   }
 
   .cards {
-        flex-direction: column; /* Stack cards vertically on mobile */
-        align-items: center; /* Center-align cards on mobile */
-    }
+    flex-direction: column;
+    /* Stack cards vertically on mobile */
+    align-items: center;
+    /* Center-align cards on mobile */
+  }
 
-    .card {
-        max-width: 100%; /* Full width on mobile */
-        margin: 0 0 20px 0; /* Add spacing around stacked cards */
-        padding: 15px; /* Reduce padding for more compact mobile layout */
-    }
-   
-    
+  .card {
+    max-width: 100%;
+    /* Full width on mobile */
+    margin: 0 0 20px 0;
+    /* Add spacing around stacked cards */
+    padding: 15px;
+    /* Reduce padding for more compact mobile layout */
+  }
+
+
 }
