turn into curve.fi clone

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ header>div {
   }
 
   nav>div {
-    display: none;
+    display: flex;
     flex-grow: 1;
     justify-content: flex-end;
 
@@ -413,7 +413,7 @@ header>div {
 
   nav>div {
     width: 100%;
-    display: none;
+    display: flex;
     justify-content: center;
 
   }
