--- a/style.css
+++ b/style.css
@@ -237,11 +237,12 @@ li {
 }
 
 #webgl-container {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 100px;
+  max-height: 100px;
   display: flex;
   justify-content: center;
   margin: auto;
+  padding-bottom: 1rem;
 }
 
 /* Input Styles */
