--- a/style.css
+++ b/style.css
@@ -113,10 +113,11 @@ nav a:hover {
   /* Darker border color on hover */
 }
 .connect-wallet{
-  border-color: rgba(34, 34, 34, 0.3);
+  border: 1px solid rgba(34, 34, 34, 0.3);
+  width: auto;
 }
 .connect-wallet:hover{
-  border-color: rgba(34, 34, 34, 0.3);
+  border: 1px solid rgba(34, 34, 34, 0.3);
 }
 .center-nav {
 
