--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ li {
   display:flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  font-size: 14px;
 }
 .slippage-cog{
   max-width: 16px;
