--- a/style.css
+++ b/style.css
@@ -292,6 +292,77 @@ li {
   cursor: pointer;
 }
 
+.pool-rows {
+  display: flex;
+  flex-direction: column;
+  
+  /* Add spacing between pool rows */
+  margin-top: 30px;
+}
+
+.pool-row:first-child{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.pool-row:last-child{
+  
+}
+
+.pool-rows-headers{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); /* Divide into two columns */
+  gap: 30px;
+  padding: 5px 20px 5px 20px;
+  border: 1px solid rgba(34, 34, 34, 0.1);
+
+  transition: transform 0.3s ease;
+
+  align-items: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: 0px;
+}
+.icon-right-arrow img{
+  max-width: 18px;
+  cursor: pointer;
+}
+.icon-right-arrow{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  cursor: pointer;
+}
+.pool-row {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); /* Divide into two columns */
+  gap: 30px;
+  padding: 10px 20px 10px 20px;
+  border: 1px solid rgba(34, 34, 34, 0.1);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+  align-items: center;
+}
+.pool-rows-headers>span{
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.pool-info {
+  /* Styles for the left column */
+}
+
+.pool-details {
+  /* Styles for the details column */
+  grid-column: span 6; /* Make it span both columns */
+  display: none;
+  padding: 20px;
+  border-top: 1px solid rgba(34, 34, 34, 0.1);
+}
+.show-details .pool-details {
+  display: block;
+}
+
 .input-image{
   max-width: 32px;
   margin-left: 16px;
