--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ li {
 .pool-row:last-child{
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  border-bottom: 1px solid rgba(34, 34, 34, 0.1);
 }
 
 .pool-rows-headers{
@@ -341,8 +342,10 @@ li {
   grid-template-columns: repeat(5, 1fr); /* Divide into two columns */
   gap: 30px;
   padding: 20px 20px 20px 20px;
-  border: 1px solid rgba(34, 34, 34, 0.1);
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
+  border-right: 1px solid rgba(34, 34, 34, 0.1);
+  border-left: 1px solid rgba(34, 34, 34, 0.1);
+  border-top: 1px solid rgba(34, 34, 34, 0.1);
+  
   transition: transform 0.3s ease;
   cursor: pointer;
   align-items: center;
