--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ main {
   display: none;
   transition: max-width 0.5s ease;
   /* Add transition for opacity and max-width */
-  max-width: 800px;
+  max-width: 100%;
   /* Adjust the maximum width as needed */
   padding: 0 20px;
   /* Add some padding for better spacing */
