--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ main {
   transition: max-width 0.5s ease;
   /* Add transition for opacity and max-width */
   max-width: 100%;
+  width:800px;
   /* Adjust the maximum width as needed */
   padding: 0 20px;
   /* Add some padding for better spacing */
