--- a/style.css
+++ b/style.css
@@ -152,7 +152,11 @@ main {
   height: 100vh;
   background-color: #F7F7F7;
 }
-
+.swap-container{
+  width: 400px;
+  max-width: 100%;
+  margin: auto;
+}
 .content {
   opacity: 0;
   display: none;
@@ -160,8 +164,7 @@ main {
   /* Add transition for opacity and max-width */
   max-width: 100%;
   width:800px;
-  /* Adjust the maximum width as needed */
-  padding: 0 20px;
+  
   /* Add some padding for better spacing */
   box-sizing: border-box;
   /* Include padding in the width calculation */
@@ -224,21 +227,18 @@ li {
   gap: 20px;
   /* Add some space between cards */
   margin-top: 30px;
-  width: 400px;
-    max-width: 100%;
+  width:100%;
+  
     margin-left: auto;
     margin-right: auto;
 }
 
 .card {
   padding: 20px;
-
+width: 100%;
   border: 1px solid rgba(34, 34, 34, 0.1);
   border-radius: 10px;
 
-  width: 100%;
-  /* Set to 100% width by default */
-  max-width: 400px;
   /* Add a maximum width */
   transition: transform 0.3s ease;
   /* Add a subtle transformation on hover */
@@ -270,8 +270,7 @@ li {
 }
 
 .btns-swap{
-  width: 400px;
-  max-width: 100%;
+  
   margin-top: 30px;
   display: flex;
   margin-left: auto;
@@ -617,7 +616,7 @@ header>div {
   }
 
   .cards {
-    flex-direction: column;
+    
     /* Stack cards vertically on mobile */
     align-items: center;
     /* Center-align cards on mobile */
