--- a/style.css
+++ b/style.css
@@ -397,9 +397,11 @@ li {
 }
 
 .mt-30px {
-  margin-top: 30px;
+  margin-top: 20px;
 }
-
+.toastify-avatar{
+  filter: brightness(0) invert(1);
+}
 .bold {
   font-weight: bold;
 }
