--- a/style.css
+++ b/style.css
@@ -378,7 +378,23 @@ li {
   cursor: pointer;
 }
 
-
+.toastify{
+  padding: 10px 20px !important;
+    color: #fff;
+    display: flex !important;
+    box-shadow: 0 3px 6px -1px rgba(0,0,0,.12), 0 10px 36px -4px rgba(77,96,232,.3);
+    background: -webkit-linear-gradient(315deg,#73a5ff,#5477f5);
+    background: linear-gradient(135deg,#73a5ff,#5477f5);
+    position: fixed;
+    opacity: 0;
+    transition: all .4s cubic-bezier(.215, .61, .355, 1);
+    cursor: pointer;
+    text-decoration: none;
+    max-width: calc(50% - 20px);
+    z-index: 2147483647;
+    border-radius: 10px !important;
+    align-items: center !important;
+}
 
 .icon-right-arrow img {
   max-width: 18px;
