--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,6 +475,9 @@ max-width: 300px;
     width: 100%;
 
 }
+.connected-border{
+  border: 1px solid #1A8917;
+}
 
 .full-width-input {
   width: 100%;
