--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,6 +477,10 @@ max-width: 300px;
 }
 .connected-border{
   border: 1px solid #1A8917;
+  cursor: initial;
+}
+.connected-border:hover{
+  border: 1px solid #1A8917;
 }
 
 .full-width-input {
